# duckdb-httpapi

./: CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
docs/: README.md
src/: httpapi_extension.cpp
src/include/: httpapi_extension.hpp
test/: README.md
test/sql/: httpapi.test
